--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.7.1",
+    "classnames": "^2.3.1",
     "next": "12.0.7",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-redux": "^7.2.6",
+    "sass": "^1.47.0"
   },
   "devDependencies": {
     "eslint": "8.6.0",
